# COP-Kmeans

./: pyproject.toml
copkmeans/: __init__.py  cop_kmeans.py
