[tool.poetry]
name = "cop-kmeans"
version = "0.1.0"
description = ""
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
packages = [{ include = "copkmeans" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
